Fix folder display on IE8

--- a/imp/themes/default/dimp/screen.css
+++ b/imp/themes/default/dimp/screen.css
@@ -374,6 +374,7 @@ span.iconImgSidebar {
 
 #logo, #dimpbarActions, #serviceActions, #foldersSidebar, #normalfolders {
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #folderopts a {
